--- a/src/SNT/ReservationBundle/Resources/config/routing/admin.yml
+++ b/src/SNT/ReservationBundle/Resources/config/routing/admin.yml
@@ -1,3 +1,8 @@
 admin_listebien:
   path:     /listebien
   defaults: { _controller: RESERVATIONBundle:Admin:listebien }
+
+
+test_ajax:
+  path:     /test_ajax
+  defaults: { _controller: RESERVATIONBundle:Admin:test_ajax }
